feat: add minimal skill support